# aidriatic-real-estate-monitor

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  rss_parser.py  setup.bat  setup.sh
app/: main.py
app/api/: deps.py
app/api/v1/endpoints/: properties.py  user_goals.py  users.py
app/api/v1/models/: __init__.py  property_models.py  user_goal_models.py  user_models.py
app/crawl_job/: crawler.py  job.py
app/database/: control.py  setup.py
app/filtering/: filter.py
app/scripts/: daily_script.py  initial_setup.py  send_email.py
crawl_job/: crawler.py  job.py
database/: control.py  setup.py
emailing/: email.py
filtering/: filter.py
job_data/: job_runner_data.json
real_estate_export/: crawl_export_1209088.md  crawl_export_2808202509.md  real_estate_data_1209088.json
rss_parser/: rss_parsing.py
scripts/: daily_script.py  initial_setup.py  send_email.py
