[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aidriatic-real-estate-monitor"
version = "0.1.1"
description = "This project monitors Croatian real estate listings via RSS, crawls new listings, manages user property wishes, stores data in a database, applies filters, and sends email notifications."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "boto3>=1.40.20",
    "crawl4ai>=0.7.4",
    "dotenv>=0.9.9",
    "fastapi>=0.117.1",
    "feedparser>=6.0.11",
    "jwt>=1.4.0",
    "litellm>=1.76.0",
    "loguru>=0.7.3",
    "pandas>=2.3.2",
    "playwright>=1.55.0",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
]

[project.scripts]
initial_setup = "scripts.initial_setup:main"
daily_crawl = "scripts.daily_script:main"
send_email = "scripts.send_email:main"

[tool.hatch.build.targets.wheel]
packages = ["crawl_job", "database", "emailing", "filtering", "scripts"]
